# bms-dl

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: archive.rs  browser.rs  cli.rs  download.rs  main.rs  normalize.rs  resolve.rs  table.rs
